--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "3.0.4",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-web": "~0.13.12",
-    "@react-native-community/datetimepicker": "3.0.4"
+    "react-native-windows": "^0.63.16"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
