--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-simple-time-picker": "^0.2.0",
     "react-native-web": "~0.13.12",
     "react-native-windows": "^0.63.16"
   },
