--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-app-loading": "^1.0.1",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.2.5",
+    "formik": "^2.2.6",
     "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -27,7 +28,8 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12",
-    "react-native-windows": "^0.63.16"
+    "react-native-windows": "^0.63.16",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
