Add, Update and Delete boat functionality added. Need cleanup and edge case, no boat checks.

--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-get-random-values": "^1.5.1",
     "react-native-paper": "^4.6.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12",
     "react-native-windows": "^0.63.16",
+    "uuid": "^8.3.2",
     "yup": "^0.32.8"
   },
   "devDependencies": {
