--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.3",
+    "@react-native-community/datetimepicker": "3.0.4",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "expo": "~40.0.0",
-    "expo-app-loading": "^1.0.1",
+    "expo-app-loading": "^1.0.2",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.2.5",
     "formik": "^2.2.6",
@@ -24,6 +25,7 @@
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-get-random-values": "^1.5.1",
+    "react-native-modal-datetime-picker": "^9.2.0",
     "react-native-paper": "^4.6.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
