--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
+    "date-fns": "^2.20.0",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.2",
     "expo-status-bar": "~1.0.3",
