--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-web": "^0.15.7",
     "react-native-windows": "^1.0.0",
     "uuid": "^8.3.2",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "expo-constants": "~10.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6"
