Fixed app.json by removing devloper.

--- a/app.json
+++ b/app.json
@@ -2,7 +2,6 @@
   "expo": {
     "name": "Regatta Comp Time",
     "description": "Sailboat Racing Handicap Comparator",
-    "developer": "Luc Grégoire",
     "slug": "RegattaCompTime",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -15,7 +14,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
