--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "date-fns": "^2.21.1",
     "expo": "^41.0.1",
     "expo-app-loading": "^1.0.3",
+    "expo-constants": "~10.1.3",
     "expo-status-bar": "^1.0.4",
     "formik": "^2.2.6",
     "lodash": "^4.17.21",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-check-box": "^2.1.7",
     "react-native-dropdown-picker": "^5.0.0",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.10.2",
@@ -34,8 +36,7 @@
     "react-native-web": "^0.15.7",
     "react-native-windows": "^1.0.0",
     "uuid": "^8.3.2",
-    "yup": "^0.32.9",
-    "expo-constants": "~10.1.3"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6"
