--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-table-component": "^1.2.1",
     "react-native-web": "^0.15.7",
     "react-native-windows": "^1.0.0",
     "uuid": "^8.3.2",
