--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "^41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-constants": "~10.1.3",
+    "expo-mail-composer": "~10.1.2",
     "expo-status-bar": "^1.0.4",
     "formik": "^2.2.6",
     "lodash": "^4.17.21",
@@ -31,7 +32,6 @@
     "react-native-modal-datetime-picker": "^9.2.1",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-paper": "^4.8.1",
-    "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-web": "^0.15.7",
